--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
 
                             <div class="tarjeta-contenido d-flex flex-column ">
                                 <div class="botonera d-flex justify-content-end">
-                                    <a href="proyectos/dropdown/index.html" target="_blank">
+                                    <a href="https://github.com/cnrubn/menu-navegacion-dropdown/blob/main/index.html" target="_blank">
                                         <div class="btn ">
                                             <i class="fa-solid fa-arrow-up-right-from-square btn-fa"></i>
                                             <h4>Visitar</h4>
