Completa actualización que añade el aprendizaje de Angular más todos los proyectos detallados hasta la fecha.

--- a/tecnologias.html
+++ b/tecnologias.html
@@ -66,8 +66,14 @@
                         <div class="row contenedor-fila  d-flex justify-content-center justify-content-sm-between align-items-center">
                             <div class="col-1 conocimiento-contenido">
                                 <div class="cuadros">
-                                    <i class="fa-brands fa-html5"></i>
-                                    <h5>HTML</h5>
+                                    <i class="fa-brands fa-angular"></i>
+                                    <h5>Angular</h5>
+                                </div>
+                            </div>
+                            <div class="col-1 conocimiento-contenido">
+                                <div class="cuadros">
+                                    <i class="fa-brands fa-js"></i></i>
+                                    <h5>Javascript</h5>
                                 </div>
                             </div>
                             <div class="col-1 conocimiento-contenido">
@@ -78,8 +84,8 @@
                             </div>
                             <div class="col-1 conocimiento-contenido">
                                 <div class="cuadros">
-                                    <i class="fa-brands fa-js"></i></i>
-                                    <h5>Javascript</h5>
+                                    <i class="fa-brands fa-html5"></i>
+                                    <h5>HTML</h5>
                                 </div>
                             </div>
                             <div class="col-1 conocimiento-contenido">
@@ -100,6 +106,18 @@
                         <!-- OTROS+ -->
                         <div class="row contenedor-fila  d-flex justify-content-center justify-content-sm-between align-items-center">
 
+
+                            <div class="col-1 conocimiento-contenido sin-icon d-flex align-items-center justify-content-center">
+                                <div class="cuadros ">
+                                    <h5>PrimeNG</h5>
+                                </div>
+                            </div>
+
+                            <div class="col-1 conocimiento-contenido sin-icon d-flex align-items-center justify-content-center">
+                                <div class="cuadros ">
+                                    <h5>Angular Material</h5>
+                                </div>
+                            </div>
 
                             <div class="col-1 conocimiento-contenido sin-icon d-flex align-items-center justify-content-center">
                                 <div class="cuadros ">
