Añadidos últimos proyectos con Angular.

--- a/contacto.html
+++ b/contacto.html
@@ -86,14 +86,14 @@
                                 </a>
                             </div>
 
-                            <div class="col-1 redes-contenido instagram">
+                            <!-- <div class="col-1 redes-contenido instagram">
                                 <a href="https://www.instagram.com/carrionweb/" target="_blank">
                                     <div class="cuadros">
                                         <i class="fa-brands fa-instagram"></i>
                                         <h5>Instagram</h5>
                                     </div>
                                 </a>
-                            </div>
+                            </div> -->
     
                         </div>
                     </div>
