--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             </div>
                         </article>
                         <article class="col-3 card fondo-negro">
-                                <a href="tecnologias.html"><i class="fa-brands fa-git-alt icon"></i></a>
+                                <a href="tecnologias.html"><i class="fa-brands fa-angular icon"></i></a>
                         </article>
                         <article class="col-3 card">
                             <div class="thumb"><a href="tecnologias.html"><img width="150" src="img/card-wordpress.jpg" alt=""></a></div>
